<resources>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_name">MANTPREV</string>
    <string name="appSlogan">Gestion del Mantenimiento Industrial</string>
    <string name="appEmail">support@mantprev.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Androi Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="nuevaOTfrag">Nueva Orden de Trabajo</string>
    <string name="listaOTs">Listado General de OTs</string>
    <string name="misOTsList">Mis Ordenes de Trabajo</string>
    <string name="revNvasOTsList">Revisar las nuevas OTs</string>
    <string name="revNvasOTsIndiv">Revisar Nueva OT</string>
    <string name="fragReportEjecOTs">Reportar la ejecución de OTs</string>
    <string name="fragFotosDeOTs">Visor de fotos</string>
    <string name="fragVerOrdTrab">Visualizar Ord. Trab.</string>
    <string name="fragRecurFallas">Recurrencia de Fallas</string>
    <string name="fragTendenAverias">Tendencia Averías en Equipos</string>
    <string name="fragParoMantto">Paros por Mantenimiento</string>
    <string name="fragConsumReptos">Consumo de Repuestos</string>
    <string name="fragAprovLaboral">Historial laboral de Técnicos</string>
    <string name="fragTpmsEstimReal">Tiempos Estimados/Reales</string>
    <string name="fragHistorEquips">Historial de Equipos</string>
    <string name="fragFichasTecnic">Fichas Técnicas</string>
    <string name="fragDetailRecurrFails">Detalle Recurrencia Fallas</string>
    <string name="fragRecurrFailsGraf1">Gráfica Recurrencia Fallas</string>
    <string name="fragRecurrFailsGraf2">Gráfica Recurrencia Falla</string>
    <string name="fragHrsPatoPorMantto">Hrs. paro maquinas por Mantenimiento</string>
    <string name="fragCostosReptos">Costo por consumo de Repuestos</string>
    <string name="fragConfigAdmin">Config. de Administrador</string>
    <string name="fragConfigArbolEquips">Configuración de Equipos</string>
    <string name="fragConfigUsers">Usuarios Mantprev</string>
    <string name="fragConfigGenetal">Config. generales</string>
    <string name="fragmentLogin">LOGIN</string>
    <string name="fragPersTecnico">Personal Técnico</string>
    <string name="fragNombresFallas">Nombres de Fallas</string>
    <string name="fragRecupPassw">Recuperación Password</string>
    <string name="fragShowFoto">Viendo fotos</string>
    <string name="appName"><i>MANTPREV</i></string>
    <string name="wellcomeUser"><i>Bienvenido</i></string>
    <string name="text_home2"><i>(Gestión del Mantenimiento Industrial)</i></string>
    <string name="text_home3"><i>Mantenimiento Industrial)</i></string>
    <string name="btnNewOT">CREAR UNA NUEVA OT</string>
    <string name="btnMisOTs">VER MIS ORDENES DE TRAB.</string>
    <string name="btnAsigds">OTs ASIGNADAS A MI</string>
    <string name="infoHome1">RESUMEN ORDENES DE TRABAJO</string>
    <string name="infoHome2">(OTs generadas en los últimos 30 días)</string>
    <string name="OtsGeneraas">Total de OTs generadas:</string>
    <string name="OTsRevisadas">OTs revisadas:</string>
    <string name="OTsSinRevis">OTs sin revisar:</string>
    <string name="OTsEnProceso">OTs en proceso de Ejecución:</string>
    <string name="OTsRechazadas">OTs rechazadas:</string>
    <string name="OTsFinalizad">OTs Finalizadas y reportadas:</string>
    <string name="tvCantidad"><i>###</i></string>
    <string name="menu_home">Inicio</string>
    <string name="menu_listadoOTs">Listado General de OTs</string>
    <string name="menu_verMisOTs">Ver mis Ord. de Trabajo</string>
    <string name="menu_revisarNvasOTs">Autorizar nuevas OTs</string>
    <string name="menu_otsAsignPersTec">OTs asignadas Pers. Tecn.</string>
    <string name="menu_reportEjecsOTs">Cerrar Ordenes Trabajo</string>
    <string name="menu_listaRuts">Reportar ejecución Rutinas</string>
    <string name="msg_IndicesMantto">Indices de Mantenimiento</string>
    <string name="menu_recurFallas">Recurrencia de Fallas</string>
    <string name="menu_tendecAverias">Tendencia de Averías</string>
    <string name="menu_tmpsParoMantto">Tiempos de paro por Mantto.</string>
    <string name="menu_consumReptos">Costos consumo Repuestos</string>
    <string name="menu_aprovLaboral">Aprovechamiento laboral</string>
    <string name="menu_tmpsEstimReales">Tiempos Estimados/Reales</string>
    <string name="msg_informAdic">Información adicional</string>
    <string name="menu_HistorEquips">Historial de Equipos</string>
    <string name="menu_FichasTecn">Fichas Técnicas</string>
    <string name="msg_config">Configuraciones Admin.</string>
    <string name="menu_config">Configuraciones</string>
    <string name="nuevaOT">Nueva OT</string>
    <string name="otRevisada">Revisada</string>
    <string name="otEnProceso">En proceso</string>
    <string name="otFinalizada">Finalizada</string>
    <string name="otRechazada">Rechazada</string>
    <string name="enterDataMsg">Por favor ingrese todos los datos solicitados!!!</string>
    <string name="msgNoNewOT">No hay nuevas Ordenes de Trabajo</string>
    <string name="emailAsunto">nueva Orden de Trabajo</string>
    <string name="saludo">Buen día,</string>
    <string name="content01">Mantprev le informa que el usuario</string>
    <string name="content02">ha generado una nueva Orden de Trabajo con las siguientes especificaciones</string>
    <string name="content03"><u>Equipo/Máquina ...............:</u></string>
    <string name="content04"><u>Trabajo solicitado ......:</u></string>
    <string name="content05"><u>Para Ejecutor ................:</u></string>
    <string name="content07"><u>Prioridad solicitada ....:</u></string>
    <string name="content08">Favor revisar esta Orden de Trabajo y hacer los preparativos para su ejecución</string>
    <string name="content09">Atentamente:</string>
    <string name="content10">Equipo Mantprev</string>
    <string name="content11">Estimado usuario, Mantprev le informa que su password provisional para ingresar a la aplicación es el siguiente:</string>
    <string name="content12">Código confirmación MANTPREV</string>
    <string name="content13">Mantprev App le informa que el código para confirmar su cuenta en Industrial Work Orders es el siguiente:</string>
    <string name="tblHeadNumOT"># OT:</string>
    <string name="tblHeadTrabSolic">TRABAJO SOLICITADO:</string>
    <string name="tblHeadNombEquip">NOMBRE EQUIPO:</string>
    <string name="tbHeadEjecutor">EJECUTOR:</string>
    <string name="tblHeadPriorid">PRIORIDAD:</string>
    <string name="tblHeadStatusOT">ESTATUS ACTUAL:</string>
    <string name="tvTecnAsign">TECN. ASIGNADO:</string>
    <string name="tblHeadFecha">FECHA:</string>
    <string name="tblHeadVerOT">VER OT:</string>
    <string name="tblHeadNameSolict">NOMBRE SOLICIT.:</string>
    <string name="headNewOT">SELECCIONE EL EQUIPO E INGRESE TODA LA INFORMACION</string>
    <string name="hintNombEquip">Seleccione el Equipo ---></string>
    <string name="hintTrabSolic">Ingrese el trabajo a solicitar</string>
    <string name="tvSpnSelecEjecut">Selecc. Ejecutor:</string>
    <string name="tvSpnSelecPriorid">Selecc. Prioridad:</string>
    <string name="tvAnexFotos">Anexar fotos a la OT</string>
    <string name="btnEnviarOT">Enviar OT</string>
    <string name="windowEquips">SELECCIONE UN EQUIPO</string>
    <string name="exitoOT">La Orden de Trabajo fue enviada con éxito!</string>
    <string name="failSentOT">Fallo al enviar la Orden de Trabajo!</string>
    <string name="titleOpc">Seleccione una opción:</string>
    <string name="opcTakePict">Tomar una foto</string>
    <string name="opcChoseGall">Seleccionar desde galeria</string>
    <string name="opcCancel">Cancelar</string>
    <string name="indicacion">Seleccione imagen(es)</string>
    <string name="headMisOTs1">Mis OTs según rango de fechas</string>
    <string name="headMisOTs2">(Modifique rango de fechas si lo desea)</string>
    <string name="headListaOTs1">Lista OTs según mes seleccionado</string>
    <string name="headListaOTs1b">Lista OTs asignadas a mi</string>
    <string name="headListaOTs2">(Cambie el mes o Equipo/Area si lo desea)</string>
    <string name="equipoArea">Equipo/Area:</string>
    <string name="tvNombreEquipo">Planta general</string>
    <string name="msgErrorFechas">FECHA INICIAL DEBE SER MENOR FECHA FINAL</string>
    <string name="headCkeckOTs1">Todas las nuevas Ordenes de Trabajo</string>
    <string name="mesListado">Mes del listado:</string>
    <string name="headCheckOTs2">(Revise c/OT y cambie el estatus)</string>
    <string name="tvFechaInic">Fecha Inicial:</string>
    <string name="tvFechaFinal">Fecha Final:</string>
    <string name="btnRecargar">Recargar</string>
    <string name="tvSpnEjecutor">Filtrar p/Ejecutores</string>
    <string name="tocarToSelec">Toque para seleccionar</string>
    <string name="tvRutinasLista">Lista Rutinas semana seleccionada</string>
    <string name="tvRutsIndicac">Seleccione la semana del año, equipo y ejecutor</string>
    <string name="tvSemanaRuts">Semana Ruts:</string>
    <string name="tvEjecutRuts">Ejecutor:</string>
    <string name="windowEjecut">SELECCIONE EJECUTOR</string>
    <string name="headNumRut"># RUT:</string>
    <string name="headSemana">Semana:</string>
    <string name="headTrabajo">TRABAJO REQUERIDO:</string>
    <string name="frecuRut">Frecuencia:</string>
    <string name="headFrecRut">FRECUENCIA:</string>
    <string name="tabRutina">Rutina Info.</string>
    <string name="tabRteEjecRut">Reporte ejecución Rutina</string>
    <string name="informRut">INFORMACION DE RUTINA</string>
    <string name="ejectRutina">Ejecutor Rutina:</string>
    <string name="persEstimado">Pers. estimado:</string>
    <string name="tmpoEsitmado">Tiempo estimado:</string>
    <string name="tvEstadoEquip">Estado Equipo:</string>
    <string name="tvMedidasSegur">Medidad de Seguridad:</string>
    <string name="tvCoodinPrev">Coodinaciones previas:</string>
    <string name="tvPrepPrev">Preparaciones previas:</string>
    <string name="tvIndicRteEjec">Ingrese la información del reporte de ejecucuón de la Rutina:</string>
    <string name="tvSupervRut">Supervisor de Rut:</string>
    <string name="tituloVent01">Revise, acepte o modifique la información proporcionada</string>
    <string name="ejectSelected">Ejecutor selecc.:</string>
    <string name="prioridSelect">Prioridad selecc.:</string>
    <string name="fotosAnexada">Ver fotos anexadas a la OT</string>
    <string name="etMaquina">Máquina:</string>
    <string name="tvIndicacion2">Confirme o modifique la siguiente inform.:</string>
    <string name="tvClasificOT">Clasificación OT:</string>
    <string name="tvStatuscOT">Nuevo estatus OT:</string>
    <string name="tvTecnAsig">Técnico asignado:</string>
    <string name="tvNombreApell">Nombre:*</string>
    <string name="tvEmail">Email:*</string>
    <string name="tvPassword">Password:*</string>
    <string name="etHintNombre">Primer nombre y primer apellido</string>
    <string name="etHintEmail">Ingrese su correo electrónico</string>
    <string name="etHintPassword1">Password</string>
    <string name="etHintPassword2">Confirme</string>
    <string name="btnGuardarUser">Guardar</string>
    <string name="tvLogin">BIENVENIDO A MANTPREV</string>
    <string name="tvLogin1">Por favor ingrese su Email y Password:</string>
    <string name="tvHintEmail2">Email</string>
    <string name="tvHintPassw2">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="chkOpenSesion">Mantener la sesión abierta</string>
    <string name="tvRecupPassw">Olvide mi password</string>
</resources>