<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tapices05"
    tools:context=".ui.Security.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/style_bordes_main">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/linearLayoutPr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/appName"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="26sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_home2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_home2"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_mantprev1"/>

                <TextView
                    android:id="@+id/tvInformac1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvLogin"
                    android:background="@color/black"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvInformac2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/tvLogin1"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#9E9CA2"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/tvHintEmail2" />

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="15dp"
                       android:layout_marginEnd="15dp"
                       app:endIconMode="password_toggle">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/etPassword"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPassword"
                           android:background="@drawable/tapices06"
                           android:hint="@string/tvHintPassw2"/>

                   </com.google.android.material.textfield.TextInputLayout>

                    <!--
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:inputType="textPassword"
                        android:hint="@string/tvHintPassw2" />
                    -->
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/btnLogin" />

                    <CheckBox
                        android:id="@+id/chBoxOpenSession"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:text="@string/chkOpenSesion"/>

                    <TextView
                        android:id="@+id/tvRecupPassw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/tvRecupPassw"
                        android:textColor="#3333ff"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNombreApellido"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvNombreApell"
                            android:textStyle="bold"
                            android:layout_marginTop="15dp"
                            android:textSize="15sp"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvEmail"
                            android:textStyle="bold"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="15dp"
                            android:textSize="15sp"
                            android:gravity="end"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tvHrsLabor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvPassword"
                            android:textStyle="bold"
                            android:layout_marginTop="15dp"
                            android:textSize="15sp"
                            android:gravity="end"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etNombrApellido1"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/etHintNombre"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/style_bordes_edittex3"/>

                        <EditText
                            android:id="@+id/etCorreoElectr"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/etHintEmail"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:focusable="false"
                            android:enabled="false"
                            android:background="@drawable/style_bordes_edittex3"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etHrsLabor"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/etHintPassword1"
                                android:padding="5dp"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                android:background="@drawable/style_bordes_edittex3"
                                android:selectAllOnFocus="true"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="10dp"/>

                            <EditText
                                android:id="@+id/etPassword2"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/etHintPassword2"
                                android:padding="5dp"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                android:background="@drawable/style_bordes_edittex3"
                                android:selectAllOnFocus="true"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="10dp"/>

                        </LinearLayout>

                        <Button
                            android:id="@+id/btnSavePasswFnl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="80dp"
                            android:text="@string/btnGuardarUser"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progresBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>